Prefetch for DDR3. Option to use SDRAM for ROM.

--- a/TurboGrafx16_Q13.qsf
+++ b/TurboGrafx16_Q13.qsf
@@ -359,6 +359,7 @@ set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:sys/build_id.tcl"
 
 set_global_assignment -name CDF_FILE jtag.cdf
 set_global_assignment -name QIP_FILE sys/sys_q13.qip
+set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name SYSTEMVERILOG_FILE ddram.sv
 set_global_assignment -name VHDL_FILE dpram.vhd
 set_global_assignment -name VHDL_FILE vram_controller.vhd
