Refactoring of BW mixing.

--- a/TurboGrafx16-lite.qsf
+++ b/TurboGrafx16-lite.qsf
@@ -360,6 +360,7 @@ set_global_assignment -name VERILOG_FILE sdram.v
 set_global_assignment -name SYSTEMVERILOG_FILE ddram.sv
 set_global_assignment -name VHDL_FILE dpram.vhd
 set_global_assignment -name VHDL_FILE vram_controller.vhd
+set_global_assignment -name SYSTEMVERILOG_FILE color_mix.sv
 set_global_assignment -name VHDL_FILE psg.vhd
 set_global_assignment -name VHDL_FILE cpu65xx.vhd
 set_global_assignment -name VHDL_FILE huc6202.vhd
